--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
       <div class="logo">
         <a href="index.html">
-          <img src="\images\logo.jpg" alt="Logo" />
+          <img src=".\images\logo.jpg" alt="Logo" />
         </a>
       </div>
       <ul>
@@ -40,14 +40,14 @@
         </p>
       </div>
       <div class="right">
-        <img src="\images\profile.jpg" alt="Profile Picture" />
+        <img src=".\images\profile.jpg" alt="Profile Picture" />
       </div>
     </div>
 
 
     <div class="about" id="about">
       <div class="left">
-        <img src="\images\about.jpg" alt="About Image" />
+        <img src=".\images\about.jpg" alt="About Image" />
       </div>
       <div class="right">
         <h5>About Me</h5>
@@ -120,21 +120,21 @@
       </div>
       <div class="strategy-items">
       <div class="item">
-        <img src="images\strategy1.jpg" alt="Strategy Image 1" />
+        <img src=".\images\strategy1.jpg" alt="Strategy Image 1" />
         <div class="info">
           <h4>Strengthen Core Skills</h4>
           <p>I practice research, interviewing, writing, and fact-checking through daily exercises and analyzing professional news articles.</p>
         </div>
       </div>
       <div class="item">
-        <img src="images\strategy2.jpg" alt="Strategy Image 2" />
+        <img src=".\images\strategy2.jpg" alt="Strategy Image 2" />
         <div class="info">
           <h4>Learn Through Real Experience</h4>
           <p>I join school media projects, create articles, photos, and videos to gain hands-on experience and improve my storytelling.</p>
         </div>
       </div>
       <div class="item">
-        <img src="images\strategy3.jpg" alt="Strategy Image 3" />
+        <img src=".\images\strategy3.jpg" alt="Strategy Image 3" />
         <div class="info">
           <h4>Stay Curious and Updated</h4>
           <p>I follow news, study media trends, and observe society to develop critical thinking and keep my journalistic perspective sharp.</p>
@@ -174,7 +174,7 @@
     <footer>
       <div class="top">
         <div class="logo">
-          <img src="\images\logo.jpg">
+          <img src=".\images\logo.jpg">
         </div>
         <ul>
           <li><a href="#">Home</li>
